Remove unwanted code and fix the center placement of particle container on small screen

--- a/src/components/ParticleAnimation.css
+++ b/src/components/ParticleAnimation.css
@@ -11,7 +11,6 @@
   will-change: transform;
   will-change: opacity, transform;
   opacity: 0;
-  /* transform: scale(1.5); */
 }
 
 .particle {
@@ -154,24 +153,10 @@
   overflow: hidden;
 }
 
-/* @media screen and (max-width: 1050px) {
-  .particle-wrapper {
-    width: 90vw;
-    scale: 1;
-  }
-} */
-/* @media screen and (max-width: 720px) {
-  .particle-wrapper {
-    width: 90vw;
-  }
-} */
-
 @media screen and (max-width: 479px) {
-  /* .particle-wrapper {
-    margin-left: auto;
-    margin-right: auto;
-    left: -31px;
-  } */
+  .particle-wrapper {
+    width: 300px;
+  }
   .particle-1 {
     right: -3px;
   }
